# image_porces

./: .gitignore  AUDIT_REPORT_v1_2025-12-30.md  CHANGELOG.md  CODEX_RULES.md  CONTRACTS.md  DECISIONS.md  LICENSE  Makefile  README.md  REPORT.md  ROADMAP.md  STRUKTURA.md  hueforge_filament_library.json  pyproject.toml  structure.md
artifacts/: optical_hueforge_pix1_crop_step_010.json  optical_hueforge_pix1_crop_step_015.json  optical_hueforge_pix1_crop_step_020.json  optical_hueforge_pix1_step_010.json  optical_hueforge_pix1_step_015.json  optical_hueforge_pix1_sweep_0p5x.json  optical_hueforge_reference_config.json
data/: filament_catalog_filamentcolors.json  filamentcolors_state.json
debug/: height_layers.npy  height_mm.npy  layer_plan.json  layers_by_label.json  palette_assigned.json  palette_suggested.json
docs/: MIGRATION.md  README.md
examples/: README.md
filaments/: default_catalog.json
manual_tests/: README.md
presets/: cmyk_like_auto.json  default.json  default_4_manual.json
tests/: test_add_border.py  test_cli_bundle.py  test_cli_hueforge_bundle_smoke.py  test_cli_overrides.py  test_cli_overrides_subprocess.py  test_cli_pipeline.py  test_cli_preview.py  test_cli_version.py  test_color_distance.py  test_colorplan_export.py  test_colorplan_plan.py  test_examples_bundle.py  test_filament_assignment.py  test_filamentcolors_sync.py  test_filaments_cli.py  test_height_map.py  test_height_map_non_regression_by_index.py  test_hueforge_add_border_equivalence.py  test_hueforge_color_distance_equivalence.py  test_hueforge_colorplan_export_equivalence.py  (+33 more)
(+74 files in other folders)
